--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "ai-usage-monitor",
-  "version": "1.0.0",
-  "description": "Monitor AI provider usage limits from opencode config",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
-  },
-  "dependencies": {
-    "chalk": "^5.3.0",
-    "cli-table3": "^0.6.5"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
-  }
+	"name": "ai-usage-monitor",
+	"version": "1.0.0",
+	"description": "Monitor AI provider usage limits from opencode config",
+	"main": "dist/index.js",
+	"type": "module",
+	"scripts": {
+		"build": "tsc",
+		"start": "./scripts/start.sh",
+		"dev": "tsx src/index.ts",
+		"typecheck": "tsc --noEmit",
+		"lint": "biome lint .",
+		"format": "biome format . --write",
+		"check": "biome check ."
+	},
+	"dependencies": {
+		"chalk": "^5.3.0",
+		"cli-table3": "^0.6.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.13",
+		"@types/node": "^20.0.0",
+		"tsx": "^4.0.0",
+		"typescript": "^5.0.0"
+	}
 }
