--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"description": "Monitor AI provider usage limits from opencode config",
 	"main": "dist/index.js",
+	"bin": {
+		"ai-usage": "dist/index.js"
+	},
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
