fix: add postinstall script for bunx github support

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
+		"postinstall": "bun run build",
 		"start": "./scripts/start.sh",
 		"dev": "tsx src/index.ts",
 		"typecheck": "tsc --noEmit",
