refactor: code review fixes and improvements
- Fix biome.json scanner ignores for dist folder
- Update start.sh to use bun instead of node
- Add OpenCode to API Key-based providers in README
- Add debug logging for Gemini config loading errors
- Fix opencode-zen to use consistent monthlyLimit (1000) in all paths
- Fix opencode-zen to clamp remaining value to minimum 0
- Update loadAuthConfig to return path for accurate logging
- Fix minimax timestamp normalization (seconds vs milliseconds)
- Add timeElapsed clamping in calculateMonthlyPace
- Add ErrorCode type for standardized error handling
- Fix antigravity token expiration logic
- Fix antigravity 401/403 error distinction
- Add validation to getActiveAntigravityAccount
- Handle rotated refresh_token in antigravity-accounts
- Update README to reflect Antigravity uses OAuth

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"includes": ["**", "!!**/dist"]
+		"includes": ["**"],
+		"experimentalScannerIgnores": ["dist", "dist/**"]
 	},
 	"formatter": {
 		"enabled": true,
