feat: add --show-antigravity flag and --help option
- Add --show-antigravity CLI flag to show individual Antigravity model details
- Default mode now shows utilization range (e.g., 5%-88%) for Antigravity
- Add --help/-h flag with usage information
- Update README.md with CLI options documentation
- Fix biome.json to properly ignore dist folder
- Update start.sh to pass arguments through

--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,7 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"includes": ["**"],
-		"experimentalScannerIgnores": ["dist", "dist/**"]
+		"includes": ["**", "!!**/dist", "!!**/dist"]
 	},
 	"formatter": {
 		"enabled": true,
